backend/internal/architecture/testdata/invalid/internal/platform/platform_singleton.go
package platform

type state struct{}

var singleton = &state{}
